[package]
name = "rust-ospfd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ospfd"
path = "ospfd/main.rs"

[workspace]
members = ["ospf-packet", "ospf-macros"]

[dependencies]
bytes = "1.6.*"                                     # convenient byte manipulation
lazy_static = "1.4.*"                               # lazy static initialization
ospf-packet = { path = "ospf-packet" }              # OSPF packet declaration & parsing
pnet = "0.35.*"                                     # raw socket
thiserror = "1.0.*"                                 # error handling
tokio = { version = "1.38.*", features = ["full"] } # async runtime
