[package]
name = "ospf-packet"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.*"                           # convenient byte manipulation
ospf-macros = { path = "../ospf-macros" } # ospf packet macors
pnet = "0.35.*"                           # raw socket
pnet_sys = "0.35.*"                       # pnet sys
pnet_macros = "0.35.*"                    # pnet macros
pnet_macros_support = "0.35.*"            # pnet macros support
